--- a/_config.yml
+++ b/_config.yml
@@ -63,15 +63,27 @@ author:
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "X"
+      icon: "fab fa-fw fa-x-twitter-square"
+      url: "https://x.com/ProjectSomedays"
+    - label: "YouTube"
+      icon: "fab fa-fw fa-youtube-square"
+      url: "https://www.youtube.com/@projectsomedays"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/Project-Somedays"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://www.instagram.com/projectsomedays_justdostuff/"
+    - label: "Threads"
+      icon: "fab fa-fw fa-threads"
+      url: "https://www.threads.net/@projectsomedays_justdostuff"
+    - label: "Bluesky.social"
+      icon: "fab fa-fw fa-bluesky"
+      url: "https://bsky.app/profile/projectsomedays.bsky.social"
+    - label: "OpenProcessing.ogn"
+      icon: "💻"
+      url: "https://openprocessing.org/user/410675/"
 
 footer:
   links:
