--- a/_config.yml
+++ b/_config.yml
@@ -60,11 +60,11 @@ author:
   avatar : "/assets/images/Project Somedays and Pete.jpg"
   bio    : "Creative Coder, Maker, App Developer, Blender Beginner, Course Designer, Teacher in remission, Full-time Science Communicator. Slave to many passions."
   links:
-    - label: "Website"
+    - label: "LinkedIn"
       icon: "fas fa-fw fa-link"
-      url: "https://"
+      url: "https://www.linkedin.com/in/pete-newman/"
     - label: "X"
-      icon: "fab fa-fw fa-x-twitter-square"
+      icon: "fab fa-fw fa-x-twitter"
       url: "https://x.com/ProjectSomedays"
     - label: "YouTube"
       icon: "fab fa-fw fa-youtube-square"
