--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ author:
   bio    : "Creative Coder, Maker, App Developer, Blender Beginner, Course Designer, Teacher in remission, Full-time Science Communicator. Slave to many passions."
   links:
     - label: "LinkedIn"
-      icon: "fas fa-fw fa-link"
+      icon: "fas fa-brands fa-linkedin-in"
       url: "https://www.linkedin.com/in/pete-newman/"
     - label: "X"
       icon: "fab fa-fw fa-x-twitter"
