--- a/_config.yml
+++ b/_config.yml
@@ -82,20 +82,35 @@ author:
       icon: "fab fa-fw fa-bluesky"
       url: "https://bsky.app/profile/projectsomedays.bsky.social"
     - label: "OpenProcessing.org"
-      icon: "fab fa-fw fa-solid fa-laptop-code"
+      icon: "fab fa-fw fa-laptop-code"
       url: "https://openprocessing.org/user/410675/"
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "LinkedIn"
+      icon: "fas fa-brands fa-linkedin-in"
+      url: "https://www.linkedin.com/in/pete-newman/"
+    - label: "X"
+      icon: "fab fa-fw fa-x-twitter"
+      url: "https://x.com/ProjectSomedays"
+    - label: "YouTube"
+      icon: "fab fa-fw fa-youtube-square"
+      url: "https://www.youtube.com/@projectsomedays"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/Project-Somedays"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://www.instagram.com/projectsomedays_justdostuff/"
+    - label: "Threads"
+      icon: "fab fa-fw fa-threads"
+      url: "https://www.threads.net/@projectsomedays_justdostuff"
+    - label: "Bluesky.social"
+      icon: "fab fa-fw fa-bluesky"
+      url: "https://bsky.app/profile/projectsomedays.bsky.social"
+    - label: "OpenProcessing.org"
+      icon: "fab fa-fw fa-laptop-code"
+      url: "https://openprocessing.org/user/410675/"
 
 defaults:
   # _posts
