Attempts at updating

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /3dprinting/
   - title: "Weekly Creative Coding Challenges"
     url: /wccc/
-  - title: "Render Challenges"
+  - title: "Blender Biz"
     url: /blender/
   - title: "Genuary"
     url: /genuary/
